test/parsetest/valid/static_methods.java
class A {
    public static void main(String[] args){

    }

     public static void bla(String[] blub){
        return A.main();
    }

    public void main(String[] bla){}

    public void String(String[] bla){}


    public void blub;
}