test/parsetest/invalid/no_static_methods.java
class A {
  public static void main(String[] args) {

  }
  public static int blub(){
    return 3;
  }
}